# cyclotomic

./: .travis.yml  Cargo.toml  Dockerfile  README.md  ci-build.sh  convert_prime_tables_to_csv.ijs  download_prime_tables.sh  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
arithmetic_benchmark/: all.html  fn.main.html  index.html
benches/: arithmetic-benchmark.rs
benchmarks/: README  anticresults  char.g  cyclotomicresults  plot.py  render_notebook.py  render_structure_variants_notebook.py  run_bench.sh  sparsity_bench.sh
benchmarks/antic/: .gitignore  Makefile  main.cpp
benchmarks/results/: performance.json  structure_variants_quick.json
cyclobench/: all.html  fn.main.html  fn.write_gap_cycs.html  index.html  sidebar-items.js  struct.Opts.html
cyclotomic/: all.html  fn.main.html  index.html  sidebar-items.js
cyclotomic/coprime_counter/: index.html  sidebar-items.js
cyclotomic/cyclotomic/: index.html  sidebar-items.js  struct.Cyclotomic.html  type.Q.html  type.Z.html
cyclotomic/divisors/: index.html  sidebar-items.js
cyclotomic/fields/: index.html  sidebar-items.js  trait.AdditiveGroup.html  trait.CyclotomicFieldElement.html  trait.FieldElement.html  trait.MultiplicativeGroup.html  type.Exponent.html  type.Q.html  type.Z.html
cyclotomic/polynomial/: index.html  sidebar-items.js  struct.Polynomial.html  type.Q.html  type.Z.html  type.ZPlus.html
cyclotomic/prime_counter/: index.html  sidebar-items.js
cyclotomic/prime_factors/: index.html  sidebar-items.js
cyclotomic/prime_table/: index.html  sidebar-items.js  struct.PrimeTableReader.html  type.ZPlus.html
cyclotomic/primes/: index.html  sidebar-items.js  struct.Primes.html  type.R.html  type.Z.html  type.ZPlus.html
examples/: perf_bench.rs
inversion_benchmark/: all.html  fn.main.html  index.html
notebooks/: performance_benchmarks.ipynb  structure_constant_variants.ipynb
paper/: .gitignore  Makefile  cyclotom.tex  paper.bib  paper.tex  src2latex.py
plans/: README.md  c-cpp-usage-instructions.md  c-ffi-interface.md  dense-polynomial-modulo.md  f64-integer-paths.md  field-of-fractions.md  float-structure-constants.md  performance-graphs.md  reduce-copy-paste.md  remove-rational-clones.md  simd-investigation.md
scripts/: install_antic.sh  install_flint.sh
src/: cyclotomic.rs  lib.rs  main.rs  parser.rs  polynomial.rs  prime_counter.rs  prime_table.rs  primes.rs  quadratic_sieve.rs
src/arithmetic_benchmark/: arithmetic-benchmark.rs.html
src/character/: mod.rs
src/coprime_counter/: coprime_counter.rs  euler_product.rs  hybrid_coprime_counter.rs  mod.rs
src/cyclobench/: cyclobench.rs.html
src/fields/: diff  (+7 more)
(+270 files in other folders)
