[package]
name = "cyclotomic"
description = "high-performance library for exact operations in cyclotomic fields"
version = "0.1.0"
authors = ["romo <robmoore121@gmail.com>", "Kaashif Hymabaccus <kaashif@kaashif.co.uk>"]
license = "LGPL-3.0-only"
edition = "2018"
categories = ["mathematics"]
homepage = "https://github.com/CyclotomicFields/cyclotomic"
repository = "https://github.com/CyclotomicFields/cyclotomic"
readme = "README.md"

[dependencies]
num = "0.2.1"
combinations = "0.1.0"
quickcheck = "0.9.2"
rand = "0.7.3"
divisors = "0.2.1"
rand_chacha = "0.2.2"
rustc-hash = "1.1.0"
clap = "3.0.0-beta.1"
antic = "0.1"

[[bin]]
name = "cyclobench"

[profile.release]
debug = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/katex-header.html" ]
