[package]
name = "cyclotomic"
description = "high-performance library for exact operations in cyclotomic fields"
version = "0.2.0"
authors = ["romo <robmoore121@gmail.com>", "Kaashif Hymabaccus <kaashif@kaashif.co.uk>"]
license = "LGPL-3.0-only"
edition = "2018"
categories = ["mathematics"]
homepage = "https://github.com/CyclotomicFields/cyclotomic"
repository = "https://github.com/CyclotomicFields/cyclotomic"
readme = "README.md"

[dependencies]
num = "0.2.1" # TODO: remove this, it's slow
combinations = "0.1.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7.3"
divisors = "0.2.1"
rand_chacha = "0.2.2"
rustc-hash = "1.1.0"
clap = { version = "3.2.17", features = ["derive"] }
antic = "0.1"
rug = "1.10.0"
num-traits = "0.2.12"
sexp = "1.1.4"
nom = "6.1.2"

[[bin]]
name = "cyclobench"

[profile.release]
debug = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/katex-header.html" ]
