[package]
name = "cyclotomic"
description = "high-performance library for exact operations in cyclotomic fields"
version = "0.2.0"
authors = ["romo <robmoore121@gmail.com>", "Kaashif Hymabaccus <kaashif@kaashif.co.uk>"]
license = "LGPL-3.0-only"
edition = "2018"
categories = ["mathematics"]
homepage = "https://github.com/CyclotomicFields/cyclotomic"
repository = "https://github.com/CyclotomicFields/cyclotomic"
readme = "README.md"

[dependencies]
num = "0.2.1" # TODO: remove this, it's slow
combinations = "0.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.10.1"
rustc-hash = "1.1.0"
rug = { version = "=1.17.0", default-features = false, features = ["integer", "rational"] }
nom = "7.1.3"

[profile.release]
debug = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/katex-header.html" ]
